# SiEPIC-Tools

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  Dockerfile  EBeam_lu_879.gds  Labelling Standards.md  Makefile  README.md  SiEPIC-Tools refactoring.md  example_klayout_tidy3d_plotly.lym  index.html  params.json  pcell_python_GDSfactory.lym  pcell_python_GDSfactory2.lym  requirements.txt  run_pytest  schema.py  setup.py  test_local.sh  versions.md
klayout_dot_config/python/: MANIFEST.in  README.md  pyproject.toml
klayout_dot_config/python/SiEPIC/: Thumbs.db  __init__.py  _globals.py  calibre_temp.py  config.py  config.yml  core.py  example_gr.py  examples.py  extend.py  github.py  install.py  metal_menu_helper.py  netlist.py  numpy-1.11.1-py35_1.tar.bz2  opics_netlist_sim.py  scripts.py  setup.py  utils.py  verification.py
klayout_dot_config/python/SiEPIC/files/: calibre_drc_gui.ui  monte_carlo_gui.ui  waveguide_gui.ui
klayout_dot_config/python/SiEPIC/lumerical/: ApodizedContraDC.py  __init__.py  contraDirectionalCoupler.py  environment.plist  (+11 more)
klayout_dot_config/python/SiEPIC_klayout/: extend.py  github.py  install.py  scripts.py  setup.py
klayout_dot_config/python/numpy/: __init__.py  version.py
klayout_dot_config/python/siepic_tools/: __init__.py  _globals.py  config.py
klayout_dot_config/tech/: pyproject.toml
klayout_dot_config/tech/GSiP/: CALIBRE.xml  DFT.xml  GSiP.lyt  GSiP_2018_01_18.cml  GSiP_2018_01_20.cml  GSiP_2020_05_27.cml  MONTECARLO.xml  Verification.xml  WAVEGUIDES.xml  __init__.py  klayout_Layers_GSiP.lyp
(+603 files in other folders)
